--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "electron-updater-example",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
   "scripts": {
-    "publish": "electron-builder -p always"
+    "publish": "electron-builder --mac --win -p always"
   },
   "devDependencies": {
-    "electron": "^14.0.1",
-    "electron-builder": "^22.11.7",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.12.0",
     "electron-notarize": "^1.1.1"
   },
   "dependencies": {
-    "electron-log": "^4.4.1",
-    "electron-updater": "^4.3.9"
+    "electron-log": "^5.1.1",
+    "electron-updater": "^6.1.8"
   },
   "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
+    "appId": "com.github.hugo-rochvarger-lmmv.electronupdaterexample",
+    "publish": [{
+      "provider": "github",
+      "owner": "hugo-rochvarger-lmmv",
+      "repo": "electron-updater-example"
+  }],
     "afterSign": "./build/notarize.js",
     "mac": {
       "category": "your.app.category.type"
