--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "electron-updater example project",
   "author": "Matt Haggard",
   "scripts": {
-    "publish": "electron-builder --mac --win -p always"
+    "build": "electron-builder --mac -p always"
   },
   "devDependencies": {
     "electron": "^29.1.0",
